--- a/QuizEngine.xcodeproj/xcshareddata/xcschemes/QuizEngine.xcscheme
+++ b/QuizEngine.xcodeproj/xcshareddata/xcschemes/QuizEngine.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "52BAFC1F25D98A7C00E6F52A"
+               BuildableName = "QuizEngineTests.xctest"
+               BlueprintName = "QuizEngineTests"
+               ReferencedContainer = "container:QuizEngine.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
